# DiscordBot

./: Cargo.toml  Dockerfile
.github/workflows/: docker.yaml  rust.yaml
migrations/: 20220718154417_todo.sql
src/: main.rs
src/bot/: mod.rs
src/web/: mod.rs  state.rs
