[package]
name = "bot"
version = "0.1.0"
edition = "2021"

[dependencies]
actix-web = "4.1.0"
tokio = { version = "1.0", features = ["full"] }
reqwest = { version = "0.11", features = ["json"] }

[dependencies.serenity]
features = ["cache", "framework", "standard_framework", "rustls_backend"]
git = "https://github.com/serenity-rs/serenity"
rev = "ab406c1d6dba55965dfc614d78e77f142f892878"
